--- a/.env.example
+++ b/.env.example
@@ -210,3 +210,10 @@ INSTAGRAM_REDIRECT_URI=https://YOURWEBURLHERE.COM/social/handle/instagram
 # default value = 1
 # SHOW_ROUTE_HTTP_METHOD=0
 
+MYFINANCE2_DB_CONNECTION=myfinance2_mysql
+MYFINANCE2_DB_HOST=127.0.0.1
+MYFINANCE2_DB_PORT=3306
+MYFINANCE2_DB_DATABASE=myfinance2
+MYFINANCE2_DB_USERNAME=root
+MYFINANCE2_DB_PASSWORD=
+
