[REPO] Adding images

--- a/composer.json
+++ b/composer.json
@@ -323,7 +323,7 @@
     {
       "name": "ovidiuro/myfinance2",
       "type": "git",
-      "url": "https://bitbucket.org/ovidiuro/laravel-package-myfinance2.git"
+      "url": "https://ovidiurosu90@github.com/ovidiurosu90/laravel-package-myfinance2.git"
     },
     {
       "name": "ovidiuro/laravel-package-admin-mydata",
