--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "jeremykenedy/laravel-roles": "^11.0",
     "jeremykenedy/laravel2step": "^3.1",
     "jeremykenedy/uuid": "^3.1",
+    "lab404/laravel-impersonate": "^1.7",
     "laravel/framework": "^10.0",
     "laravel/sanctum": "^3.2",
     "laravel/socialite": "^5.6",
@@ -31,6 +32,7 @@
     "laravel/ui": "^4.2",
     "laravelcollective/html": "^6.4",
     "nesbot/carbon": "^2.66",
+    "ovidiuro/myfinance2": "*",
     "predis/predis": "^2.1",
     "pusher/pusher-php-server": "^7.2",
     "rap2hpoutre/laravel-log-viewer": "^2.3",
@@ -38,8 +40,7 @@
     "socialiteproviders/instagram": "^5.0",
     "socialiteproviders/linkedin": "^4.2",
     "socialiteproviders/twitch": "^5.3",
-    "socialiteproviders/youtube": "^4.1",
-    "ovidiuro/myfinance2": "*"
+    "socialiteproviders/youtube": "^4.1"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
