--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "laravel/tinker": "^2.8",
     "laravel/ui": "^4.2",
     "nesbot/carbon": "^3.8",
-    "ovidiuro/myfinance2": "*",
+    "ovidiuro/myfinance2": "^1.0",
     "predis/predis": "^2.1",
     "pusher/pusher-php-server": "^7.2",
     "rap2hpoutre/laravel-log-viewer": "^2.3",
@@ -51,7 +51,7 @@
     "laravel/sail": "^1.18",
     "mockery/mockery": "^1.4.4",
     "nunomaduro/collision": "^8.8",
-    "ovidiuro/laravel-package-admin-mydata": "*",
+    "ovidiuro/laravel-package-admin-mydata": "^1.0",
     "phpunit/phpunit": "^11.0",
     "spatie/laravel-ignition": "^2.0"
   },
@@ -116,20 +116,6 @@
       "DragonCode\\LaravelDataDumper\\Service\\": "vendor/ovidiuro/laravel-package-admin-mydata/src/Service/Overrides/"
     }
   },
-  "files": [
-    "app/Http/Controllers/Overrides/LaravelBlockerController.php",
-    "app/Http/Controllers/Overrides/LaravelBlockerDeletedController.php",
-    "app/Http/Controllers/Overrides/LaravelLoggerController.php",
-    "app/Http/Middleware/Overrides/LogActivity.php",
-    "app/Http/Middleware/Overrides/LaravelBlocker.php",
-    "app/Http/Traits/Overrides/IpAddressDetails.php",
-    "app/Listeners/Overrides/LogSuccessfulLogin.php",
-    "app/Models/Overrides/Activity.php",
-    "app/Traits/Overrides/LaravelCheckBlockedTrait.php",
-    "app/Traits/Overrides/IpAddressDetails.php",
-    "vendor/ovidiuro/laravel-package-admin-mydata/src/Listeners/Overrides/DumpListener.php",
-    "vendor/ovidiuro/laravel-package-admin-mydata/src/Service/Overrides/Tables.php"
-  ],
   "scripts": {
     "post-autoload-dump": [
       "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
@@ -167,7 +153,7 @@
       "pestphp/pest-plugin": true
     }
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true,
   "repositories": [
     {
