--- a/package.json
+++ b/package.json
@@ -49,10 +49,8 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.33.0",
-    "font-awesome": "^4.7.0",
     "globals": "^16.4.0",
     "html-webpack-plugin": "^5.5.0",
-    "js-cookie": "^3.0.1",
     "laravel-mix": "^6.0.49",
     "laravel-vite-plugin": "^1.0.6",
     "nodemon": "^3.0.1",
@@ -73,7 +71,6 @@
     "typescript": "^5.0.4",
     "typescript-eslint": "^8.44.0",
     "universal-social-auth": "^0.2.6",
-    "vform": "^2.1.2",
     "vite": "^6.0.3",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-html": "^3.2.0",
@@ -83,16 +80,9 @@
     "vite-plugin-minify": "^2.0.1",
     "vite-plugin-pages": "^0.33.1",
     "vite-plugin-pages-sitemap": "^1.4.5",
-    "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-static-copy": "^3.1.4",
     "vite-plugin-stylelint": "^6.0.2",
-    "vue": "^3.2.47",
-    "vue-content-loader": "^2.0.1",
-    "vue-github-button": "^3.1.0",
-    "vue-gtag-next": "^1.14.0",
-    "vue-sweetalert2": "^5.0.5",
-    "vue-template-compiler": "^2.7.14",
-    "vue-tippy": "^6.0.0"
+    "vue": "^3.2.47"
   },
   "dependencies": {
     "@eonasdan/tempus-dominus": "^6.9.11",
@@ -102,12 +92,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "@plugin-web-update-notification/vite": "^1.3.0",
-    "@rollup/plugin-inject": "^5.0.3",
     "@selectize/selectize": "^0.15.2",
-    "@sentry/tracing": "^7.38.0",
-    "@sentry/vue": "^8.37.1",
-    "@vueform/multiselect": "^2.5.8",
     "alpinejs": "^3.11.1",
     "axios": "^1.3.4",
     "bootstrap": "^5.3.8",
@@ -118,19 +103,10 @@
     "jquery": "^3.6.3",
     "jquery-datetimepicker": "^2.5.21",
     "jquery-mask-plugin": "^1.14.16",
-    "laravel-echo": "^1.15.0",
     "lightweight-charts": "^5.0.7",
     "lodash": "^4.17.21",
-    "lodash.clonedeep": "^4.5.0",
-    "moment": "^2.30.1",
     "password-strength-meter": "git+https://github.com/elboletaire/password-strength-meter.git#v2.1.0",
-    "pusher-js": "^8.0.1",
-    "requirejs": "^2.3.6",
-    "save-dev": "^0.0.1-security",
     "vite-plugin-externals": "^0.6.2",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
-    "vue3-apexcharts": "^1.4.10",
-    "vuex": "^4.1.0"
+    "vue": "^3.2.47"
   }
 }
