[REPO] Fixing overrides

--- a/.env.example
+++ b/.env.example
@@ -226,3 +226,7 @@ MYFINANCE2_INVITE_TOKEN=YOURMYFINANCE2INVITETOKENHERE
 TEST_USER_EMAIL=YOURTESTUSEREMAIL
 TEST_USER_PASSWORD=
 
+# Suppress Symfony deprecation warnings from third-party packages
+# (jeremykenedy/laravel-blocker uses deprecated static trait method calls)
+SYMFONY_DEPRECATIONS_HELPER=disabled
+
