--- a/composer.json
+++ b/composer.json
@@ -44,65 +44,64 @@
     "nunomaduro/collision": "^8.8",
     "ovidiuro/laravel-package-admin-mydata": "^1.0",
     "phpunit/phpunit": "^11.0",
+    "laravel/tinker": "^2.10",
     "spatie/laravel-ignition": "^2.0"
   },
   "autoload": {
     "exclude-from-classmap": [
-      "vendor/jeremykenedy/laravel-logger/src/App/Http/Middleware/LogActivity.php",
-      "vendor/jeremykenedy/laravel-logger/src/App/Http/Controllers/LaravelLoggerController.php",
-      "vendor/jeremykenedy/laravel-logger/src/App/Http/Traits/IpAddressDetails.php",
       "vendor/jeremykenedy/laravel-logger/src/App/Models/Activity.php",
-      "vendor/jeremykenedy/laravel-logger/src/App/Listeners/LogSuccessfulLogin.php",
+      "vendor/jeremykenedy/laravel-logger/src/App/Http/Controllers/LaravelLoggerController.php",
+      "vendor/jeremykenedy/laravel-blocker/src/App/Http/Middleware/LaravelBlocker.php",
       "vendor/jeremykenedy/laravel-blocker/src/App/Traits/LaravelCheckBlockedTrait.php",
       "vendor/jeremykenedy/laravel-blocker/src/App/Traits/IpAddressDetails.php",
-      "vendor/jeremykenedy/laravel-blocker/src/App/Http/Middleware/LaravelBlocker.php",
-      "vendor/jeremykenedy/laravel-blocker/src/App/Http/Controllers/LaravelBlockerController.php",
-      "vendor/jeremykenedy/laravel-blocker/src/App/Http/Controllers/LaravelBlockerDeletedController.php",
-      "vendor/dragon-code/laravel-data-dumper/src/Listeners/DumpListener.php",
+      "vendor/jeremykenedy/laravel-roles/src/App/Http/Controllers/LaravelRolesController.php",
+      "vendor/jeremykenedy/laravel-roles/src/App/Http/Controllers/Api/LaravelRolesApiController.php",
+      "vendor/jeremykenedy/laravel-roles/src/App/Services/RoleFormFields.php",
+      "vendor/jeremykenedy/laravel-roles/src/App/Services/PermissionFormFields.php",
+      "vendor/dragon-code/laravel-data-dumper/src/Listeners/DumpedListener.php",
+      "vendor/dragon-code/laravel-data-dumper/src/Listeners/FilesListener.php",
       "vendor/dragon-code/laravel-data-dumper/src/Service/Tables.php"
     ],
     "psr-4": {
       "App\\": "app/",
       "Database\\Factories\\": "database/factories/",
       "Database\\Seeders\\": "database/seeders/",
-      "jeremykenedy\\LaravelLogger\\App\\Http\\Middleware\\": "app/Http/Middleware/Overrides/",
-      "jeremykenedy\\LaravelLogger\\App\\Http\\Controllers\\": "app/Http/Controllers/Overrides/",
-      "jeremykenedy\\LaravelLogger\\App\\Http\\Traits\\": "app/Http/Traits/Overrides/",
       "jeremykenedy\\LaravelLogger\\App\\Models\\": "app/Models/Overrides/",
-      "jeremykenedy\\LaravelLogger\\App\\Listeners\\": "app/Listeners/Overrides/",
-      "jeremykenedy\\LaravelBlocker\\App\\Traits\\": "app/Traits/Overrides/",
+      "jeremykenedy\\LaravelLogger\\App\\Http\\Controllers\\": "app/Http/Controllers/Overrides/",
+      "jeremykenedy\\LaravelRoles\\App\\Http\\Controllers\\": "app/Http/Controllers/Overrides/",
+      "jeremykenedy\\LaravelRoles\\App\\Http\\Controllers\\Api\\": "app/Http/Controllers/Overrides/Api/",
+      "jeremykenedy\\LaravelRoles\\App\\Services\\": "app/Services/Overrides/",
       "jeremykenedy\\LaravelBlocker\\App\\Http\\Middleware\\": "app/Http/Middleware/Overrides/",
-      "jeremykenedy\\LaravelBlocker\\App\\Http\\Controllers\\": "app/Http/Controllers/Overrides/",
+      "jeremykenedy\\LaravelBlocker\\App\\Traits\\": "app/Traits/Overrides/",
       "DragonCode\\LaravelDataDumper\\Listeners\\": "vendor/ovidiuro/laravel-package-admin-mydata/src/Listeners/Overrides/",
       "DragonCode\\LaravelDataDumper\\Service\\": "vendor/ovidiuro/laravel-package-admin-mydata/src/Service/Overrides/"
     }
   },
   "autoload-dev": {
     "exclude-from-classmap": [
-      "vendor/jeremykenedy/laravel-logger/src/App/Http/Middleware/LogActivity.php",
-      "vendor/jeremykenedy/laravel-logger/src/App/Http/Controllers/LaravelLoggerController.php",
-      "vendor/jeremykenedy/laravel-logger/src/App/Http/Traits/IpAddressDetails.php",
       "vendor/jeremykenedy/laravel-logger/src/App/Models/Activity.php",
-      "vendor/jeremykenedy/laravel-logger/src/App/Listeners/LogSuccessfulLogin.php",
+      "vendor/jeremykenedy/laravel-logger/src/App/Http/Controllers/LaravelLoggerController.php",
+      "vendor/jeremykenedy/laravel-blocker/src/App/Http/Middleware/LaravelBlocker.php",
       "vendor/jeremykenedy/laravel-blocker/src/App/Traits/LaravelCheckBlockedTrait.php",
       "vendor/jeremykenedy/laravel-blocker/src/App/Traits/IpAddressDetails.php",
-      "vendor/jeremykenedy/laravel-blocker/src/App/Http/Middleware/LaravelBlocker.php",
-      "vendor/jeremykenedy/laravel-blocker/src/App/Http/Controllers/LaravelBlockerController.php",
-      "vendor/jeremykenedy/laravel-blocker/src/App/Http/Controllers/LaravelBlockerDeletedController.php",
-      "vendor/dragon-code/laravel-data-dumper/src/Listeners/DumpListener.php",
+      "vendor/jeremykenedy/laravel-roles/src/App/Http/Controllers/LaravelRolesController.php",
+      "vendor/jeremykenedy/laravel-roles/src/App/Http/Controllers/Api/LaravelRolesApiController.php",
+      "vendor/jeremykenedy/laravel-roles/src/App/Services/RoleFormFields.php",
+      "vendor/jeremykenedy/laravel-roles/src/App/Services/PermissionFormFields.php",
+      "vendor/dragon-code/laravel-data-dumper/src/Listeners/DumpedListener.php",
+      "vendor/dragon-code/laravel-data-dumper/src/Listeners/FilesListener.php",
       "vendor/dragon-code/laravel-data-dumper/src/Service/Tables.php"
     ],
     "psr-4": {
       "Tests\\": "tests/",
       "jeremykenedy\\LaravelRoles\\": "vendor/jeremykenedy/laravel-roles/src/",
-      "jeremykenedy\\LaravelLogger\\App\\Http\\Middleware\\": "app/Http/Middleware/Overrides/",
-      "jeremykenedy\\LaravelLogger\\App\\Http\\Controllers\\": "app/Http/Controllers/Overrides/",
-      "jeremykenedy\\LaravelLogger\\App\\Http\\Traits\\": "app/Http/Traits/Overrides/",
       "jeremykenedy\\LaravelLogger\\App\\Models\\": "app/Models/Overrides/",
-      "jeremykenedy\\LaravelLogger\\App\\Listeners\\": "app/Listeners/Overrides/",
-      "jeremykenedy\\LaravelBlocker\\App\\Traits\\": "app/Traits/Overrides/",
+      "jeremykenedy\\LaravelLogger\\App\\Http\\Controllers\\": "app/Http/Controllers/Overrides/",
+      "jeremykenedy\\LaravelRoles\\App\\Http\\Controllers\\": "app/Http/Controllers/Overrides/",
+      "jeremykenedy\\LaravelRoles\\App\\Http\\Controllers\\Api\\": "app/Http/Controllers/Overrides/Api/",
+      "jeremykenedy\\LaravelRoles\\App\\Services\\": "app/Services/Overrides/",
       "jeremykenedy\\LaravelBlocker\\App\\Http\\Middleware\\": "app/Http/Middleware/Overrides/",
-      "jeremykenedy\\LaravelBlocker\\App\\Http\\Controllers\\": "app/Http/Controllers/Overrides/",
+      "jeremykenedy\\LaravelBlocker\\App\\Traits\\": "app/Traits/Overrides/",
       "DragonCode\\LaravelDataDumper\\Listeners\\": "vendor/ovidiuro/laravel-package-admin-mydata/src/Listeners/Overrides/",
       "DragonCode\\LaravelDataDumper\\Service\\": "vendor/ovidiuro/laravel-package-admin-mydata/src/Service/Overrides/"
     }
